--- a/src/main/res/index.html
+++ b/src/main/res/index.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style media="screen">
 
     body{
       background-color: #3E5622;
       height: 1000px;
       color: #AFF9A8;
-      font-family: 'Roboto', sans-serif, 'Roboto Black', 'Roboto Bold';
+      font-family: 'Open Sans', sans-serif, 'Open Sans Bold';
       font-weight: 200;
-      font: 30px RobotoBlack, sans-serif;
+      font: 30px Open Sans, sans-serif;
     }
 
     #home{
@@ -52,16 +51,16 @@
     }
     p{
       color: #AFF9A8;
-      font-family: 'Roboto', sans-serif, 'Roboto Black', 'Roboto Bold';
+      font-family: 'Open Sans', sans-serif, 'Open Sans Bold';
       font-weight: 200;
-      font: 40px RobotoBlack, sans-serif;
+      font: 40px Open Sans, sans-serif;
     }
 
     ul{
       color: #AFF9A8;
-      font-family: 'Roboto', sans-serif, 'Roboto Black', 'Roboto Bold';
+      font-family: 'Open Sans', sans-serif, 'Open Sans Bold';
       font-weight: 200;
-      font: 40px RobotoBlack, sans-serif;
+      font: 40px Open Sans, sans-serif;
       list-style-type: disc;
       padding-left: 300px;
     }
@@ -109,7 +108,7 @@
       var ctx = c.getContext("2d");
       ctx.textAlign = "center";
       ctx.fillStyle = '#AFF9A8';
-      ctx.font = "900 200px RobotoBlack, sans-serif";
+      ctx.font = "900 200px Open Sans, sans-serif";
 
       ctx.fillText(624, 300, 165);
 
